--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    커밋 컨벤션 확인 용 임의 파일입니다.
+    커밋 컨벤션 확인을 위한 임의 파일입니다
     충돌을 내볼게요~
 </body>
 </html>
