--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    conflict를 위한 임의 파일입니다
+    conflict를 위한 임의 파일입니다.
     충돌을 내볼게요~
 </body>
 </html>
