Fix: password 노출 오류 해결 input type="password"로 변경하여 password가 마스킹 처리 되지 않는 오류 해결 close #4

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
             ID: <input type="text">
         </span> 
         <span>
-            비밀번호: <input type="text">
+            비밀번호: <input type="password">
         </span>
         <button type="submit">로그인</button>
     </div>
